--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
-    command: air ./apis/main.go -b 0.0.0.0
+    command: air ./cmd/main.go -b 0.0.0.0
   db:
     image: mysql
     environment:
@@ -18,7 +18,7 @@ services:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
       - MYSQL_DB=${DB_NAME}
     ports:
-      - "5432:5432"
+      - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
 
