feat: pub/sub thumbnail generator

--- a/config.yml
+++ b/config.yml
@@ -6,3 +6,5 @@ DB_NAME: "Example"
 DB_HOST: "db"
 DB_PORT: "3306"
 TEST_ENV: "TEST23"
+MINIO_ACCESS_KEY_ID: "elq1BRA1F0MjqEYJTBRJ"
+MINIO_SECRET_ACCESS_KEY: "WVdUY7SUQZs7DEQUh8MbNvcD4HGVmBKlpQqaNEvc"
