--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,25 @@ services:
     image: nats
     ports:
       - 4222:4222
+      - "8222:8222" # Optional: HTTP management port
+    command: >
+      -js
+      --store_dir=/data/nats
+    volumes:
+      - nats_data:/data/nats
+  # # n1:
+  #   image: synadia/jsm:nightly
+  #   entrypoint: /nats-server
+  #   command: "--config ./config/jetstream.conf --server_name S1"
 
+  #   ports:
+  #     - 4223:4222
+  #   volumes:
+  #     - ./stream-config:/config
+  #     - ./persistent-data/server-n1/:/data/nats-server/jetstream
+  
 volumes:
   mysql-data:
   minio-data:
+  nats_data: 
+    driver: local
